Bug fixing: wrap all error messages and locations in setup cockpit at document received details and on validation tool

--- a/delis-web/src/main/resources/static/css/main.css
+++ b/delis-web/src/main/resources/static/css/main.css
@@ -10,7 +10,7 @@ ul.org-smp-setup, ul.on-error-setup, ul.none-list-style {
 	list-style: none;
 }
 ul.org-smp-setup li ul li {
-	word-break: break-all
+	word-break: break-all;
 }	
 /* END Organisation setup */
 .cursor-pointer {
@@ -20,6 +20,10 @@ ul.org-smp-setup li ul li {
 .document-error {
 	color: red;
 }
+
+.force-break-all {
+	word-break: break-all;
+} 
 
 .no-wrap {
 	white-space: nowrap;
